fix the overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -35,9 +35,16 @@ background-position: center center;
 } */
 .image-overlay {
   top: 0;
-  
   height: 100%;
   width: 85%;
   background: rgba(0, 0, 0, 0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transition: overlay 0.2s;
 
+}
+.image-overlay:hover{
+  opacity: 1;
 }
